页面内容修改

--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -16,7 +16,7 @@
     <input type="radio" name="choice" value="{{ choice.id }}" id="choice{{ forloop.counter }}" />
     <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label>
 {% endfor %}
-<input type="submit" value="vote">
+<input type="submit" value="确定投票">
 </form>
 
 </body>
