--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,33 +1,10 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>我的博客</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-</head>
-<body>
-<div class="page-header">
-<h1><a href="/">Django Girls Blog</a></h1>
-</div>
-
-<div class="content">
-<div class="row">
-    <div class="col-md-8">
-        {% for post in posts %}
-            <div class="post">
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>published: {{ post.published_date }}</p>
-                <p>{{ post.text|linebreaks }}</p>
-            </div>
-        {% endfor %}
-    </div>
-</div>
-</div>
-
-
-</body>
-</html>
+{% extends 'blog/base.html' %}
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <h1><a href="{% url 'blog:post_detail' post.pk %}">{{ post.title }}</a></h1>
+            <p>published: {{ post.published_date }}</p>
+            <p>{{ post.text|linebreaks }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
