--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,11 +11,12 @@
 </head>
 <body>
 <div class="page-header">
+    <a href="{% url 'blog:post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 <h1><a href="/">Django Blog</a></h1>
 </div>
 <div class="content">
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-11">
        {% block content %}
        
        {% endblock %}
