--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,7 +3,17 @@
     <div class="date">
         {% if post.published_date %}
             {{ post.published_date }}
+        {% else %}
+            <a class="btn btn-default" href="{% url 'blog:post_publish' pk=post.pk %}">
+            publish
+            </a>
         {% endif %}
+    <a class="btn btn-default" href="{% url 'blog:post_edit' pk=post.pk %}">
+        <span class="glyphicon glyphicon-pencil"></span>
+    </a>
+    <a class="btn btn-default" href="{% url 'blog:post_remove' pk=post.pk %}">
+        <span class="glyphicon glyphicon-remove"></span>
+    </a>
     </div>
     <h1>{{ post.title }}</h1>
     <p>{{ post.text|linebreaks }}</p>
