--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,7 +11,17 @@
 </head>
 <body>
 <div class="page-header">
-    <a href="{% url 'blog:post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'blog:post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+        <a href="{% url 'blog:post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        <p class="top-menu">
+            Hello {{ user.username }}<small>&nbsp;
+            <a href="{% url 'django.contrib.auth.views.logout' %}">Log out</a>
+        </p>
+    {% else %}
+        <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+    {% endif %}
+
 <h1><a href="/">Django Blog</a></h1>
 </div>
 <div class="content">
