--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,28 +10,44 @@
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 </head>
 <body>
-<div class="page-header">
-    {% if user.is_authenticated %}
-        <a href="{% url 'blog:post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-        <a href="{% url 'blog:post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-        <p class="top-menu">
-            Hello {{ user.username }}<small>&nbsp;
-            <a href="{% url 'django.contrib.auth.views.logout' %}">Log out</a>
-        </p>
-    {% else %}
-        <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-    {% endif %}
 
-<h1><a href="/">Django Blog</a></h1>
-</div>
-<div class="content">
-<div class="row">
-    <div class="col-md-11">
-       {% block content %}
-       
-       {% endblock %}
+<div class="page-header">
+    <div class="row">
+        <div class="col-md-4">
+            <h1><a href="/">Django Blog</a></h1>
+        </div>
+        <div class="col-md-8">
+            {% if user.is_authenticated %}
+                <p class="text-right">
+                    <a href="{% url 'django.contrib.auth.views.logout' %}" class="top-menu"><span class="glyphicon glyphicon-log-out"></span></a>
+                    <a href="{% url 'blog:post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-list"></span></a>
+                    <a href="{% url 'blog:post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a class="top-menu">Hello {{ user.username }}&nbsp;</a>
+                </p>
+            {% else %}
+                <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-log-in"></span></a>
+            {% endif %}
+        </div>
     </div>
 </div>
+
+
+
+<div class="content">
+    <div class="row">
+        <div class="col-md-9">
+           {% block content %}
+           {% endblock %}
+        </div>
+        <div class="col-md-3">
+        <form class="form-inline" action="{% url 'blog:full_search' %}" method="get">
+            <div class="form-group">
+                <input type="text" name="q" class="form-control" id="" placeholder="全文检索">
+            </div>
+          <button type="submit" class="btn btn-default">搜索</button>
+        </form>
+        </div>
+    </div>
 </div>
 </body>
 </html>
