--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,14 @@
 {% extends 'blog/base.html' %}
 {% block content %}
     {% for post in posts %}
-        <div class="post">
+        <div class="panel panel-default">
+        <div class="panel-body">
             <h1><a href="{% url 'blog:post_detail' post.pk %}">{{ post.title }}</a></h1>
+            <blockquote>
             <p>published: {{ post.published_date }}</p>
-            <p>{{ post.text|linebreaks }}</p>
+            <p class="lead">{{ post.text|linebreaks }}</p>
+            </blockquote>
+        </div>
         </div>
     {% endfor %}
     <div class="pagination">
