--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -15,7 +15,7 @@ body {
     text-decoration: none;
 }
 .content {
-    margin-left: 40px;
+    margin: 20px;
 }
 h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
