修改网站样式 by wuzhc

--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,11 +1,12 @@
 h1 a {
-    color: #FCA205;
+    color: #000000;
+    font-weight: 500;
 }
 body {
     padding-left: 15px;
 }
 .page-header {
-    background-color: #ff9400;
+    background-color: #0088cc;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -18,7 +19,7 @@ body {
     margin: 20px;
 }
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    /*font-family: 'Lobster', cursive;*/
 }
 .date {
     float: right;
